Making single user for linked animation in Object data properties doesn't work #89369

Closed
opened 2021-06-22 17:52:58 +02:00 by Dmitry · 9 comments

System Information
Operating system: Win 10
Graphics card: 1080ti

Blender Version
Broken: 2.93.0
Worked: never

Short description of error
Making single user for linked animation in Object data properties doesn't work.
I've got some curves with linked animated "Factor start" property and there seems to be no way to unlink them.

I found that some user had the same problem as I do
https://blender.stackexchange.com/questions/209005/unlink-lights-animation-data-does-not-work/228387#228387

Exact steps for others to reproduce the error

  1. Create and duplicate(shift+D) some curves, add depth to geometry
  2. Animate Factor start or end
  3. Link animation data with Ctrl+L
  4. Use "Object - Relations - Make Single User - Object Animation" and animation still stays linked
**System Information** Operating system: Win 10 Graphics card: 1080ti **Blender Version** Broken: 2.93.0 Worked: never **Short description of error** Making single user for linked animation in Object data properties doesn't work. I've got some curves with linked animated "Factor start" property and there seems to be no way to unlink them. I found that some user had the same problem as I do https://blender.stackexchange.com/questions/209005/unlink-lights-animation-data-does-not-work/228387#228387 **Exact steps for others to reproduce the error** 1. Create and duplicate(shift+D) some curves, add depth to geometry 2. Animate Factor start or end 3. Link animation data with Ctrl+L 4. Use "Object - Relations - Make Single User - Object Animation" and animation still stays linked
Author

Added subscriber: @Reaper

Added subscriber: @Reaper
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-06-23 11:39:31 +02:00
Member

Can confirm, will check.

Can confirm, will check.
Member

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Member

Ah, sorry, have to backflip on confirming this:

  • Object Animation is for object animation (not object data like curve / mesh / etc).
  • for object animation, this actually works
  • easiest way to make single users on the object data animation is (I think) via the Outliner:
    #89369.blend
    #89369.webm

Actually, dont think this is a bug. We could add an entry to the Make Single User menu (something like Object Data Animation), but this would be more like a feature request [which are not handled in this tracker]
For user requests and feedback, please use other channels: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests
For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

So will archive for now, but feel free to comment again if issues persist.

Ah, sorry, have to backflip on confirming this: - `Object Animation` is for **object** animation (not object data like `curve` / `mesh` / etc). - for **object** animation, this actually works - easiest way to make single users on the **object data** animation is (I think) via the Outliner: [#89369.blend](https://archive.blender.org/developer/F10190241/T89369.blend) [#89369.webm](https://archive.blender.org/developer/F10190246/T89369.webm) Actually, dont think this is a bug. We could add an entry to the `Make Single User` menu (something like `Object Data Animation`), but this would be more like a feature request [which are not handled in this tracker] For user requests and feedback, please use other channels: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug So will archive for now, but feel free to comment again if issues persist.
Author

Yes that's what I thought the problem was. That's why I specified that linked animation in Object data properties doesn't work.
Maybe it isn't a bug but underdeveloped feature. I think that current "Object animation" button should create single user for all animation data no matter in which tab it is.

The outliner method works yes, but imagine if you have a few hundreds of linked objects, it would be so painful to click on every each action data in outliner.
Anyway thanks for the attention.

Yes that's what I thought the problem was. That's why I specified that linked animation in **Object data properties** doesn't work. Maybe it isn't a bug but underdeveloped feature. I think that current "Object animation" button should create single user for all animation data no matter in which tab it is. The outliner method works yes, but imagine if you have a few hundreds of linked objects, it would be so painful to click on every each action data in outliner. Anyway thanks for the attention.

This issue was referenced by d0c5c67e94

This issue was referenced by d0c5c67e940b6bb912ace7c34d85602ebcca9e7c
Member

@Reaper : D11683: Make Single User: support object data animation makes this work (having this separate from object animation for ultimate flexibility), it is a feature addition though (not a bug) so report stays closed

@Reaper : [D11683: Make Single User: support object data animation](https://archive.blender.org/developer/D11683) makes this work (having this separate from object animation for ultimate flexibility), it is a feature addition though (not a bug) so report stays closed
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89369
No description provided.